Started global css file. Most sections of homepage are now identified by ids and classes. Need to work more on layout. Need images for the site.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@ File:		index.html,  homepage of website html
 Date:		October 14, 2015
 
 
-
 -->
 
 
@@ -13,7 +12,7 @@ Date:		October 14, 2015
 <html>
 <head>
 	<meta charset="UTF-8">
-	
+	<link rel="stylesheet" type="text/css" href="css/global.css" >
 	<title>
 		The Martin Woodshow
 	</title>
@@ -39,7 +38,31 @@ Date:		October 14, 2015
 	
 	</div>			<!--End of "navholder" div -->
 	
+	<div id="mainContent">		<!-- Div for background color of main content -->
+	
+		<div class="textBox">
+			
+		</div>
+		
+		<div class="image" id="bowlPic">		<!-- picture of a bowl -->
+			
+		</div>	
+		<div class="image" id="stopperPic">		<!-- picture of a bottle stopper -->
+		
+		</div> 
+		<div class="image" id="ornamentPic">	<!-- picture of a lawn decoration -->
+			
+		</div>
+	
+	</div>			<!--End of "mainContent" -->
+	
+	<div class="clear"></div>
+	
+	<div class="footer">
+	
+	</div>			<!--End of "footer" -->
+	
 	</div>			<!--End of "wrapper" div -->
-	<
+	
 </body>
 </html>
